--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "def get_letter() -> str: \n",
     "    global LETTERS, CURRENT_LETTER\n",
     "\n",
-    "    ret_letter = None\n",
+    "    ret_letter = \"\"\n",
     "\n",
     "    if CURRENT_LETTER > 0 and CURRENT_LETTER <= len(LETTERS):\n",
     "        ret_letter = LETTERS[CURRENT_LETTER - 1]\n",
@@ -60,11 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from enum import IntEnum\n",
+    "\n",
+    "BEAT_ERROR_RANGE = 0.15\n",
     "\n",
     "'''\n",
     "A list of the possible parsings from the morse code\n",
@@ -80,12 +82,26 @@
     "    NEXT_WORD = 4\n",
     "\n",
     "    # Unknown\n",
-    "    UNKNOWN = -1"
+    "    UNKNOWN = -1\n",
+    "        \n",
+    "'''\n",
+    "Removes noise from the beat_duration\n",
+    "'''\n",
+    "def remove_noise(beat_nums):\n",
+    "    global BEAT_ERROR_RANGE\n",
+    "\n",
+    "    error_ranges = [(dur, dur * (1 - BEAT_ERROR_RANGE), dur * (1 + (BEAT_ERROR_RANGE if dur != 7 else 1))) for dur in (1,3,7)]\n",
+    "\n",
+    "    for (duration, duration_min, duration_max) in error_ranges:\n",
+    "        if beat_nums >= duration_min and beat_nums <= duration_max:\n",
+    "            return duration\n",
+    "\n",
+    "    return -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +153,7 @@
     "    global PREV_BIT, NUM_OF_BIT\n",
     "\n",
     "    # TODO: eventually make this into some type of range\n",
-    "    beats = NUM_OF_BIT // BEAT_DURATION\n",
+    "    beats = remove_noise(NUM_OF_BIT / BEAT_DURATION)\n",
     "\n",
     "    meaning = None\n",
     "    match (PREV_BIT, beats):\n",
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,12 +294,14 @@
     "Tests if the alphabet with no spaces is accurate\n",
     "'''\n",
     "def test1():\n",
-    "    translate_test(\"test1.txt\", \"golden_out1.txt\")"
+    "    translate_test(\"test1.txt\", \"golden_out1.txt\")\n",
+    "    \n",
+    "test1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,25 +309,38 @@
     "Tests if the alphabet with 1 space is accuate\n",
     "'''\n",
     "def test2():\n",
-    "    translate_test(\"test2.txt\", \"golden_out2.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test1()\n",
+    "    translate_test(\"test2.txt\", \"golden_out2_3.txt\")\n",
+    "\n",
     "test2()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Tests if multiple spaces are ommitted\n",
+    "'''\n",
+    "def test3():\n",
+    "    translate_test(\"test3.txt\", \"golden_out2_3.txt\")\n",
+    "\n",
+    "test3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Tests the \"the quick brown fox jumps over the lazy dog\"\n",
+    "'''\n",
+    "def test4():\n",
+    "    translate_test(\"test4.txt\", \"golden_out4.txt\")"
+   ]
   }
  ],
  "metadata": {
