added how-to instructions for the decoder in the README and changed the translate function to take in an out file name, instead of a file descriptor

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------------------------------------------\n",
-    "# Input Redirection\n",
+    "# Translation\n",
     "# ------------------------------------------------------\n",
-    "def translate(input_file, out = sys.stdout):\n",
+    "def translate(input_file, out = None):\n",
+    "    if out is None:\n",
+    "        stdout = sys.stdout\n",
+    "    else:\n",
+    "        stdout = open(out, \"w\")\n",
     "\n",
     "    with open(input_file, \"r\") as in_file:\n",
     "        init_letters()\n",
@@ -227,15 +231,18 @@
     "                letter = process_next_bit(bit)\n",
     "\n",
     "                if letter is not None:\n",
-    "                    print(letter, end = \"\", file = out)\n",
+    "                    print(letter, end = \"\", file = stdout)\n",
     "                    \n",
-    "        print(finalize(), file = out)\n",
+    "        print(finalize(), file = stdout)\n",
+    "\n",
+    "    if out is not None:\n",
+    "        stdout.close()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +263,7 @@
     "        dot_split = in_file.split(\".\")\n",
     "        result_file = \"{}_out.{}\".format(\"\".join(dot_split[:-1]), dot_split[-1])\n",
     "    \n",
-    "    with open(result_file, \"w\") as results:\n",
-    "        translate(in_file, out=results)\n",
+    "    translate(in_file, out=result_file)\n",
     "\n",
     "    correct_output = True\n",
     "\n",
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,14 +300,14 @@
     "Tests if the alphabet with no spaces is accurate\n",
     "'''\n",
     "def test1():\n",
-    "    translate_test(\"test1.txt\", \"golden_out1.txt\")\n",
+    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\")\n",
     "    \n",
     "test1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,14 +315,14 @@
     "Tests if the alphabet with 1 space is accuate\n",
     "'''\n",
     "def test2():\n",
-    "    translate_test(\"test2.txt\", \"golden_out2_3.txt\")\n",
+    "    translate_test(\"decoder_tests/test2.txt\", \"decoder_tests/golden_out2_3.txt\")\n",
     "\n",
     "test2()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,14 +330,14 @@
     "Tests if multiple spaces are ommitted\n",
     "'''\n",
     "def test3():\n",
-    "    translate_test(\"test3.txt\", \"golden_out2_3.txt\")\n",
+    "    translate_test(\"decoder_tests/test3.txt\", \"decoder_tests/golden_out2_3.txt\")\n",
     "\n",
     "test3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +345,7 @@
     "Tests the \"the quick brown fox jumps over the lazy dog\"\n",
     "'''\n",
     "def test4():\n",
-    "    translate_test(\"test4.txt\", \"golden_out4.txt\")"
+    "    translate_test(\"decoder_tests/test4.txt\", \"decoder_tests/golden_out4.txt\")"
    ]
   }
  ],
