--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,11 @@
     "        \n",
     "'''\n",
     "Removes noise from the beat_duration\n",
+    "\n",
+    "Params:\n",
+    "- beat_nums(float): the rough number of beats\n",
     "'''\n",
-    "def remove_noise(beat_nums):\n",
+    "def remove_noise(beat_nums: float):\n",
     "    global BEAT_ERROR_RANGE\n",
     "\n",
     "    error_ranges = [(dur, dur * (1 - BEAT_ERROR_RANGE), dur * (1 + (BEAT_ERROR_RANGE if dur != 7 else 1))) for dur in (1,3,7)]\n",
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
