adding timing to the translation test

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -249,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import time"
    ]
   },
   {
@@ -261,12 +262,19 @@
     "'''\n",
     "Basic Test Template to make other tests out of\n",
     "'''\n",
-    "def translate_test(in_file, golden_file, result_file = None):\n",
+    "def translate_test(in_file, golden_file, result_file = None, time_it = False):\n",
     "    if result_file is None:\n",
     "        dot_split = in_file.split(\".\")\n",
     "        result_file = \"{}_out.{}\".format(\"\".join(dot_split[:-1]), dot_split[-1])\n",
     "    \n",
+    "    timing = time.time()\n",
+    "\n",
     "    translate(in_file, out=result_file)\n",
+    "\n",
+    "    if time_it:\n",
+    "        timing = time.time() - timing\n",
+    "    else:\n",
+    "        timing = 0\n",
     "\n",
     "    correct_output = True\n",
     "\n",
@@ -289,6 +297,10 @@
     "            \n",
     "    Path(result_file).unlink()\n",
     "\n",
+    "    if correct_output:\n",
+    "        timing_statement = \"\" if not time_it else f\" in {timing:4.2} seconds\"\n",
+    "        print(f\"Successfully translated {in_file}{timing_statement}\")\n",
+    "\n",
     "    return correct_output\n",
     "                 \n"
    ]
@@ -297,13 +309,21 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully translated decoder_tests/test1.txt in 0.0043 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Tests if the alphabet with no spaces is accurate\n",
     "'''\n",
     "def test1():\n",
-    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\")\n",
+    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\", time_it = True)\n",
     "    \n",
     "test1()"
    ]
@@ -312,13 +332,21 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully translated decoder_tests/test2.txt in 0.0037 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Tests if the alphabet with 1 space is accuate\n",
     "'''\n",
     "def test2():\n",
-    "    translate_test(\"decoder_tests/test2.txt\", \"decoder_tests/golden_out2_3.txt\")\n",
+    "    translate_test(\"decoder_tests/test2.txt\", \"decoder_tests/golden_out2_3.txt\", time_it = True)\n",
     "\n",
     "test2()"
    ]
@@ -327,13 +355,21 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully translated decoder_tests/test3.txt in 0.0057 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Tests if multiple spaces are ommitted\n",
     "'''\n",
     "def test3():\n",
-    "    translate_test(\"decoder_tests/test3.txt\", \"decoder_tests/golden_out2_3.txt\")\n",
+    "    translate_test(\"decoder_tests/test3.txt\", \"decoder_tests/golden_out2_3.txt\", time_it = True)\n",
     "\n",
     "test3()"
    ]
@@ -342,13 +378,23 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully translated decoder_tests/test4.txt in 0.003 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Tests the \"the quick brown fox jumps over the lazy dog\"\n",
     "'''\n",
     "def test4():\n",
-    "    translate_test(\"decoder_tests/test4.txt\", \"decoder_tests/golden_out4.txt\")"
+    "    translate_test(\"decoder_tests/test4.txt\", \"decoder_tests/golden_out4.txt\", time_it = True)\n",
+    "\n",
+    "test4()"
    ]
   }
  ],
