--- a/encoder.ipynb
+++ b/encoder.ipynb
@@ -18,6 +18,7 @@
     "        if char != ' ':\n",
     "            encoded_bits += encode_char(char)  \n",
     "            encoded_bits += encode_letter_separator()\n",
+    "            encoded_bits += \" \"\n",
     "        else:\n",
     "            encoded_bits += encode_word_separator()\n",
     "            encoded_bits += \" \"\n",
@@ -26,18 +27,23 @@
     "\n",
     "def encode_char(char):\n",
     "    encoded_bits = \"\"\n",
-    "    for symbol in MORSE_CODE_DICT[char]:\n",
-    "        encoded_bits += (encode_symbol(symbol))\n",
-    "        encoded_bits += (encode_symbol_separator())\n",
+    "    morse_code = MORSE_CODE_DICT[char]\n",
     "    \n",
+    "    for i, symbol in enumerate(morse_code):\n",
+    "        encoded_bits += encode_symbol(symbol)\n",
     "        \n",
+    "        # Check if it's the last symbol to avoid adding a separator\n",
+    "        if i < len(morse_code) - 1:\n",
+    "            encoded_bits += encode_symbol_separator()\n",
+    "    \n",
     "    return encoded_bits\n",
+    "    \n",
     "\n",
     "def encode_symbol(symbol):\n",
-    "    return \"1\" * (3 if symbol == '-' else 1)  \n",
+    "    return \"1\" * (3 if symbol == '-' else 1)\n",
     "\n",
     "def encode_symbol_separator():\n",
-    "    return \"0\" * 1  \n",
+    "    return \"0\"  \n",
     "\n",
     "def encode_word_separator():\n",
     "    return \"0\" * 7  \n",
