Added better documentation to encoder

--- a/encoder.ipynb
+++ b/encoder.ipynb
@@ -6,12 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ------------------------------------------------------\n",
+    "# Encoder\n",
+    "# ------------------------------------------------------\n",
     "MORSE_CODE_DICT = {'A': '.-', 'B': '-...', 'C': '-.-.', 'D': '-..', 'E': '.', 'F': '..-.', 'G': '--.', 'H': '....',\n",
     "                       'I': '..', 'J': '.---', 'K': '-.-', 'L': '.-..', 'M': '--', 'N': '-.', 'O': '---', 'P': '.--.',\n",
     "                       'Q': '--.-', 'R': '.-.', 'S': '...', 'T': '-', 'U': '..-', 'V': '...-', 'W': '.--', 'X': '-..-',\n",
     "                       'Y': '-.--', 'Z': '--..', '1': '.----', '2': '..---', '3': '...--', '4': '....-', '5': '.....',\n",
     "                       '6': '-....', '7': '--...', '8': '---..', '9': '----.', '0': '-----', ' ': '/'}\n",
     "\n",
+    "'''\n",
+    "Encodes the text from the txt file into bits\n",
+    "\n",
+    "Params:\n",
+    "- text: read from the txt file\n",
+    "'''\n",
     "def encode_text(text):\n",
     "    encoded_bits = \"\"\n",
     "    for char in text.upper():  \n",
@@ -24,7 +33,12 @@
     "            encoded_bits += \" \"\n",
     "    return encoded_bits\n",
     "\n",
+    "'''\n",
+    "Encodes each individual char into its binary counterpart\n",
     "\n",
+    "Params:\n",
+    "- char: invidual char from the txt file\n",
+    "'''\n",
     "def encode_char(char):\n",
     "    encoded_bits = \"\"\n",
     "    morse_code = MORSE_CODE_DICT[char]\n",
@@ -32,13 +46,15 @@
     "    for i, symbol in enumerate(morse_code):\n",
     "        encoded_bits += encode_symbol(symbol)\n",
     "        \n",
-    "        # Check if it's the last symbol to avoid adding a separator\n",
+    "        \n",
     "        if i < len(morse_code) - 1:\n",
     "            encoded_bits += encode_symbol_separator()\n",
     "    \n",
     "    return encoded_bits\n",
     "    \n",
-    "\n",
+    "'''\n",
+    "Based on the beat map we created, separators are created\n",
+    "'''\n",
     "def encode_symbol(symbol):\n",
     "    return \"1\" * (3 if symbol == '-' else 1)\n",
     "\n",
@@ -50,7 +66,9 @@
     "\n",
     "def encode_letter_separator():\n",
     "    return \"0\" * 3\n",
-    "\n",
+    "'''\n",
+    "Writes the bits to file after they are encoded \n",
+    "'''\n",
     "def write_bits_to_file(encoded_text, filename):\n",
     "    with open(filename, 'w') as f:\n",
     "        f.write(encoded_text)"
