--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -87,7 +87,7 @@
     "'''\n",
     "Removes noise from the beat_duration\n",
     "'''\n",
-    "def remove_noise(beat_nums):\n",
+    "def remove_noise(beat_nums:float) -> int:\n",
     "    global BEAT_ERROR_RANGE\n",
     "\n",
     "    error_ranges = [(dur, dur * (1 - BEAT_ERROR_RANGE), dur * (1 + (BEAT_ERROR_RANGE if dur != 7 else 1))) for dur in (1,3,7)]\n",
