--- a/encoder.ipynb
+++ b/encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,8 @@
    "source": [
     "input_file = input(\"Enter input file name: \")\n",
     "input_file+= \".txt\"\n",
-    "output_file = 'output.txt'\n",
+    "input_file = \"encoder_tests/\" + input_file\n",
+    "output_file = 'encoder_tests/output.txt'\n",
     "with open(input_file, 'r') as f:\n",
     "    text = f.read()\n",
     "encoded_text = encode_text(text)\n",
@@ -115,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
