updated the decoder to begin integration with hardware

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -90,8 +90,7 @@
     "Params:\n",
     "- beat_nums(float): the rough number of beats\n",
     "'''\n",
-
-    "def remove_noise(beat_nums:float) -> int:\n",
+    "def remove_noise(beat_nums: float):\n",
     "    global BEAT_ERROR_RANGE\n",
     "\n",
     "    error_ranges = [(dur, dur * (1 - BEAT_ERROR_RANGE), dur * (1 + (BEAT_ERROR_RANGE if dur != 7 else 1))) for dur in (1,3,7)]\n",
@@ -214,10 +213,189 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pynq import Overlay, DefaultIP, allocate\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(DefaultIP):\n",
+    "    CONTROL_REGISTER = 0x0\n",
+    "    def __init__(self, description):\n",
+    "        super().__init__(description = description)\n",
+    "        \n",
+    "    bindto = ['xilinx.com:hls:processNextBit:1.0']\n",
+    "        \n",
+    "    def start(self):\n",
+    "        self.write(Decoder.CONTROL_REGISTER, 0x01);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "overlay = Overlay(\"/home/xilinx/pynq/overlays/project/decoder/process_next_bit.bit\")\n",
+    "decoder = overlay.processNextBit_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_channel = overlay.axi_dma.sendchannel\n",
+    "recv_channel = overlay.axi_dma.recvchannel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_next_bit_hw(in_bits, recv_chars):\n",
+    "    global decoder, send_channel, recv_channel\n",
+    "    decoder.start()\n",
+    "    send_channel.start()\n",
+    "    recv_channel.start()\n",
+    "    send_channel.transfer(in_bits)\n",
+    "    send_channel.wait()\n",
+    "    recv_channel.transfer(recv_chars)\n",
+    "    recv_channel.wait()\n",
+    "    \n",
+    "    return recv_chars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RegisterMap {\n",
+       "  CTRL = Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0, INTERRUPT=0, RESERVED_3=0),\n",
+       "  GIER = Register(Enable=0, RESERVED=0),\n",
+       "  IP_IER = Register(CHAN0_INT_EN=0, CHAN1_INT_EN=0, RESERVED_0=0),\n",
+       "  IP_ISR = Register(CHAN0_INT_ST=0, CHAN1_INT_ST=0, RESERVED_0=0)\n",
+       "}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decoder.register_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bit_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_hw(bit, finalize = False):\n",
+    "    global bit_list\n",
+    "    list_capacity = 100\n",
+    "    if finalize or len(bit_list) == list_capacity:\n",
+    "        print(bit_list)\n",
+    "        list_capacity = len(bit_list)\n",
+    "        in_bits = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
+    "        recv_chars = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
+    "        \n",
+    "        in_bits[:] = bit_list[:]\n",
+    "        print(\"in_bits\", in_bits)\n",
+    "        output = process_next_bit_hw(in_bits, recv_chars)\n",
+    "        \n",
+    "        print(\"output\", output)\n",
+    "        \n",
+    "        return_letter = ''.join(map(chr, recv_chars))\n",
+    "        bit_list = []\n",
+    "        del in_bits, recv_chars\n",
+    "        \n",
+    "        return return_letter\n",
+    "    else:\n",
+    "        bit_list.append(bit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finalize_hw():\n",
+    "    return process_hw(0, finalize = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ------------------------------------------------------\n",
     "# Translation\n",
     "# ------------------------------------------------------\n",
-    "def translate(input_file, out = None):\n",
+    "def translate(input_file, out = None, process_func = process_next_bit, finalize_func = finalize):\n",
     "    if out is None:\n",
     "        stdout = sys.stdout\n",
     "    else:\n",
@@ -232,12 +410,12 @@
     "\n",
     "                bit = int(bit)\n",
     "                \n",
-    "                letter = process_next_bit(bit)\n",
+    "                letter = process_func(bit)\n",
     "\n",
     "                if letter is not None:\n",
     "                    print(letter, end = \"\", file = stdout)\n",
     "                    \n",
-    "        print(finalize(), file = stdout)\n",
+    "        print(finalize_func(), file = stdout)\n",
     "\n",
     "    if out is not None:\n",
     "        stdout.close()\n",
@@ -246,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,21 +434,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
     "Basic Test Template to make other tests out of\n",
     "'''\n",
-    "def translate_test(in_file, golden_file, result_file = None, time_it = False):\n",
+    "def translate_test(in_file, golden_file, result_file = None, time_it = False, **kwargs):\n",
     "    if result_file is None:\n",
     "        dot_split = in_file.split(\".\")\n",
     "        result_file = \"{}_out.{}\".format(\"\".join(dot_split[:-1]), dot_split[-1])\n",
     "    \n",
     "    timing = time.time()\n",
     "\n",
-    "    translate(in_file, out=result_file)\n",
+    "    translate(in_file, out=result_file, **kwargs)\n",
     "\n",
     "    if time_it:\n",
     "        timing = time.time() - timing\n",
@@ -296,7 +474,7 @@
     "                print(f\"One was empty:\\n'{next_result}' does not match '{next_golden}'\")\n",
     "                correct_output = False\n",
     "            \n",
-    "    Path(result_file).unlink()\n",
+    "#     Path(result_file).unlink()\n",
     "\n",
     "    if correct_output:\n",
     "        timing_statement = \"\" if not time_it else f\" in {timing:4.2} seconds\"\n",
@@ -308,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully translated decoder_tests/test1.txt in 0.0043 seconds\n"
+      "Successfully translated decoder_tests/test1.txt in 0.016 seconds\n"
      ]
     }
    ],
@@ -331,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully translated decoder_tests/test2.txt in 0.0037 seconds\n"
+      "Successfully translated decoder_tests/test2.txt in 0.013 seconds\n"
      ]
     }
    ],
@@ -354,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully translated decoder_tests/test3.txt in 0.0057 seconds\n"
+      "Successfully translated decoder_tests/test3.txt in 0.014 seconds\n"
      ]
     }
    ],
@@ -377,14 +555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully translated decoder_tests/test4.txt in 0.003 seconds\n"
+      "Successfully translated decoder_tests/test4.txt in 0.014 seconds\n"
      ]
     }
    ],
@@ -397,11 +575,85 @@
     "\n",
     "test4()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 0, 0, 0]\n",
+      "in_bits [1 0 1 1 1 0 0 0]\n",
+      "output [0 0 0 0 0 0 0 0]\n",
+      "'\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000' does not match 'a'\n",
+      "One was empty:\n",
+      "'\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000' does not match 'a'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def testA_hw():\n",
+    "    translate_test(\"decoder_tests/untitled.txt\", \"decoder_tests/untitled1.txt\", time_it = True, process_func = process_hw, finalize_func = finalize_hw)\n",
+    "testA_hw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1]\n",
+      "in_bits [1 0 1 1 1 0 0 0 1 1 1 0 1 0 1 0 1 0 0 0 1 1 1 0 1 0 1 1 1 0 1 0 0 0 1 1 1\n",
+      " 0 1 0 1 0 0 0 1 0 0 0 1 0 1 0 1 1 1 0 1 0 0 0 1 1 1 0 1 1 1 0 1 0 0 0 1 0\n",
+      " 1 0 1 0 1 0 0 0 1 0 1 0 0 0 1 0 1 1 1 0 1 1 1 0 1 1]\n",
+      "output [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1]\n",
+      "in_bits [0 0 0 1 1 1 0 1 0 1 1 1 0 0 0 1 0 1 1 1 0 1 0 1 0 0 0 1 1 1 0 1 1 1 0 0 0\n",
+      " 1 1 1 0 1 0 0 0 1 1 1 0 1 1 1 0 1 1 1 0 0 0 1 0 1 1 1 0 1 1 1 0 1 0 0 0 1\n",
+      " 1 1 0 1 1 1 0 1 0 1 1 1 0 0 0 1 0 1 1 1 0 1 0 0 0 1]\n",
+      "output [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "in_bits [1 0 1 0 0 0 1 1 1 0 0 0 1 0 1 0 1 1 1 0 0 0 1 0 1 0 1 0 1 1 1 0 0 0 1 0 1\n",
+      " 1 1 0 1 1 1 0 0 0 1 1 1 0 1 0 1 0 1 1 1 0 0 0 1 1 1 0 1 0 1 1 1 0 1 1 1 0\n",
+      " 0 0 1 1 1 0 1 1 1 0 1 0 1 0 0 0]\n",
+      "output [1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "'\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0001\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0001\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000' does not match 'abcdefghijklmnopqrstuvwxyz'\n",
+      "One was empty:\n",
+      "'\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0001\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0001\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000' does not match 'abcdefghijklmnopqrstuvwxyz'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test1_hw():\n",
+    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\", time_it = True, process_func = process_hw, finalize_func = finalize_hw)\n",
+    "    \n",
+    "test1_hw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
