updated the files to match the changes made in the lab

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -223,15 +223,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Decoder(DefaultIP):\n",
-    "    CONTROL_REGISTER = 0x0\n",
-    "    def __init__(self, description):\n",
-    "        super().__init__(description = description)\n",
+    "# class Decoder(DefaultIP):\n",
+    "#     CONTROL_REGISTER = 0x0\n",
+    "#     def __init__(self, description):\n",
+    "#         super().__init__(description = description)\n",
     "        \n",
-    "    bindto = ['xilinx.com:hls:processNextBit:1.0']\n",
+    "#     bindto = ['xilinx.com:hls:processNextBit:1.0']\n",
     "        \n",
-    "    def start(self):\n",
-    "        self.write(Decoder.CONTROL_REGISTER, 0x01);"
+    "#     def start(self):\n",
+    "#         self.write(Decoder.CONTROL_REGISTER, 0x01);"
    ]
   },
   {
@@ -241,38 +241,14 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "try {\n",
-       "require(['notebook/js/codecell'], function(codecell) {\n",
-       "  codecell.CodeCell.options_default.highlight_modes[\n",
-       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
-       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
-       "      Jupyter.notebook.get_cells().map(function(cell){\n",
-       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
-       "  });\n",
-       "});\n",
-       "} catch (e) {};\n"
-      ]
+      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "try {\n",
-       "require(['notebook/js/codecell'], function(codecell) {\n",
-       "  codecell.CodeCell.options_default.highlight_modes[\n",
-       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
-       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
-       "      Jupyter.notebook.get_cells().map(function(cell){\n",
-       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
-       "  });\n",
-       "});\n",
-       "} catch (e) {};\n"
-      ]
+      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -280,7 +256,7 @@
    ],
    "source": [
     "overlay = Overlay(\"/home/xilinx/pynq/overlays/project/decoder/process_next_bit.bit\")\n",
-    "decoder = overlay.processNextBit_0"
+    "# decoder = overlay.processNextBit_0"
    ]
   },
   {
@@ -289,8 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "send_channel = overlay.axi_dma.sendchannel\n",
-    "recv_channel = overlay.axi_dma.recvchannel"
+    "send_channel = overlay.processNextBit.axi_dma.sendchannel\n",
+    "recv_channel = overlay.processNextBit.axi_dma.recvchannel"
    ]
   },
   {
@@ -301,7 +277,7 @@
    "source": [
     "def process_next_bit_hw(in_bits, recv_chars):\n",
     "    global decoder, send_channel, recv_channel\n",
-    "    decoder.start()\n",
+    "    # decoder.start()\n",
     "    send_channel.start()\n",
     "    recv_channel.start()\n",
     "    send_channel.transfer(in_bits)\n",
@@ -334,7 +310,7 @@
     }
    ],
    "source": [
-    "decoder.register_map"
+    "# decoder.register_map"
    ]
   },
   {
@@ -356,7 +332,6 @@
     "    global bit_list\n",
     "    list_capacity = 100\n",
     "    if finalize or len(bit_list) == list_capacity:\n",
-    "        print(bit_list)\n",
     "        list_capacity = len(bit_list)\n",
     "        in_bits = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
     "        recv_chars = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
@@ -367,7 +342,9 @@
     "        \n",
     "        print(\"output\", output)\n",
     "        \n",
-    "        return_letter = ''.join(map(chr, recv_chars))\n",
+    "        a_offset = ord('a')\n",
+    "        letter_list = [(chr(letter+a_offset-1) if letter else ' ') for letter in recv_chars]\n",
+    "        return_letter = ''.join(letter_list)\n",
     "        bit_list = []\n",
     "        del in_bits, recv_chars\n",
     "        \n",
@@ -384,6 +361,31 @@
    "source": [
     "def finalize_hw():\n",
     "    return process_hw(0, finalize = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "import numpy as np\n",
+    "import scipy.signal as signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_preproc(signal_data: list, sample_rate: int):\n",
+    "    fft_result = np.fft.fft(signal_data, sample_rate)\n",
+    "    freqs = np.fft.fftfreq(len(signal), 1/sample_rate)\n",
+    "\n",
+    "    max_freq_index = np.argmax(fft_result)\n",
+    "    max_freq = freqs[max_freq_index]    \n"
    ]
   },
   {
