half added a filter and fft

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -296,13 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydub import AudioSegment\n",
     "import numpy as np\n",
-    "import scipy.signal as signal"
+    "import scipy.signal as signal\n",
+    "import math"
    ]
   },
   {
@@ -345,10 +346,59 @@
     "    def __init__(self, fft: FFT = FFT) -> None:\n",
     "        self.fft = fft\n",
     "\n",
+    "    def gen_coef(self, num_coef: int, sample_rate: int, max_freq: float, bandwidth: float) -> list:\n",
+    "        lower_cutoff = max_freq - bandwidth / 2\n",
+    "        upper_cutoff = max_freq + bandwidth / 2\n",
+    "\n",
+    "        coefficients = list()\n",
+    "\n",
+    "        for i in range(num_coef):\n",
+    "            t = (i - (num_coef - 1) / 2) / sample_rate\n",
+    "\n",
+    "            next_coef = None\n",
+    "            if i == (num_coef - 1) / 2:\n",
+    "                next_coef = 2 * math.pi * bandwidth\n",
+    "            else:\n",
+    "                next_coef = (math.sin(2 * math.pi * upper_cutoff * t) \n",
+    "                             - math.sin(2 * math.pi * lower_cutoff * t)) / (math.pi * t)\n",
+    "                \n",
+    "            coefficients.append(next_coef)\n",
+    "\n",
+    "        return coefficients\n",
+    "\n",
+    "\n",
     "    def filter(self, unfiltered: list, sample_rate: int):\n",
     "        fft = self.fft(unfiltered, sample_rate)\n",
     "        max_freq, sampling_rate, bandwidth = fft.transform()\n",
-    "\n"
+    "\n",
+    "        shift_reg = list()\n",
+    "        # Bandwidth/ sampling_rate = num_of_coefs?\n",
+    "        # Bandwidth is pretty specific, so maybe keep it at a hard like 11?\n",
+    "        num_of_coefs = 10\n",
+    "        coefficients = self.gen_coef(num_of_coefs, sampling_rate, max_freq, bandwidth)\n",
+    "\n",
+    "        filtered = list()\n",
+    "        accumulator = 0\n",
+    "        data = 0\n",
+    "\n",
+    "        # TODO: finish filter\n",
+    "        for unfil_data in unfiltered:\n",
+    "            for i in range(num_of_coefs - 1, -1, -1):\n",
+    "                if i == 0:\n",
+    "                    shift_reg[0] = unfil_data\n",
+    "                    data = unfil_data\n",
+    "                else:\n",
+    "                    shift_reg[i] = shift_reg[i-1]\n",
+    "                    data = shift_reg[i]\n",
+    "\n",
+    "                accumulator += data * coefficients[i]\n",
+    "\n",
+    "            filtered.append(accumulator)\n",
+    "\n",
+    "        return filtered\n",
+    "        \n",
+    "\n",
+    "        "
    ]
   },
   {
